--- a/DbUpdate/DbUpdate.csproj
+++ b/DbUpdate/DbUpdate.csproj
@@ -46,6 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\clsAlterColumnType.cs" />
+    <Compile Include="Class\clsAlterTable.cs" />
+    <Compile Include="Class\clsCommonDb.cs" />
+    <Compile Include="Class\clsCreateSP.cs" />
+    <Compile Include="Class\clsCreateTable.cs" />
+    <Compile Include="Class\clsCreateTrigger.cs" />
+    <Compile Include="Class\clsDropColumn.cs" />
+    <Compile Include="Class\DBConnection.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +62,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
