--- a/DbUpdate/DbUpdate.csproj
+++ b/DbUpdate/DbUpdate.csproj
@@ -54,16 +54,16 @@
     <Compile Include="Class\clsCreateTrigger.cs" />
     <Compile Include="Class\clsDropColumn.cs" />
     <Compile Include="Class\DBConnection.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="UpdateData.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+      <DependentUpon>UpdateData.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+      <DependentUpon>UpdateData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
