--- a/DbUpdate/DbUpdate.csproj
+++ b/DbUpdate/DbUpdate.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\BranchInfo.cs" />
     <Compile Include="Class\clsAlterColumnType.cs" />
     <Compile Include="Class\clsAlterTable.cs" />
     <Compile Include="Class\clsCommonDb.cs" />
@@ -54,7 +55,10 @@
     <Compile Include="Class\clsCreateTable.cs" />
     <Compile Include="Class\clsCreateTrigger.cs" />
     <Compile Include="Class\clsDropColumn.cs" />
+    <Compile Include="Class\CompanyInfo.cs" />
+    <Compile Include="Class\CompanyPathInfo.cs" />
     <Compile Include="Class\DBConnection.cs" />
+    <Compile Include="Class\UserInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateData.cs">
