--- a/DbUpdate/DbUpdate.csproj
+++ b/DbUpdate/DbUpdate.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Class\clsCreateTable.cs" />
     <Compile Include="Class\clsCreateTrigger.cs" />
     <Compile Include="Class\clsDbClear.cs" />
+    <Compile Include="Class\clsDbUpdater.cs" />
     <Compile Include="Class\clsDropColumn.cs" />
     <Compile Include="Class\CompanyInfo.cs" />
     <Compile Include="Class\CompanyPathInfo.cs" />
@@ -96,6 +97,7 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>powershell -ExecutionPolicy Unrestricted -File "$(ProjectDir)GetGitVersion.ps1"</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
